# paragraph-meta-portfolio

./: .gitignore  Cargo.toml  README.md  pyproject.toml
app/ui/: main.rs
data/: metadata.json
