[package]
name = "paragraph-meta-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["json"] } # 用於調用 Python API
tokio = { version = "1", features = ["full"] }